--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,19 @@ html *
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
+/* Add some padding to the body to prevent content from being hidden behind the fixed nav */
+body {
+    padding-top: 3em; /* Adjust this value based on the height of your nav */
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
+    position:fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Ensure it is above other elements */
+
+
     background-color: #333;
     overflow: hidden;
     margin: auto;
