--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,19 @@ body {
     color: white;
 }
 
+.topnav .name {
+    position: absolute;
+    left: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #f2f2f2;
+    text-decoration: none;
+}
+
+.topnav .name:hover {
+    background-color: transparent; /* No hover effect for the name */
+    color: #f2f2f2;
+}
 
 .businessCard {
     padding-top: 2em;
@@ -108,3 +121,20 @@ body {
         justify-content: center;
     }
 }
+
+
+.parallax {
+    /* The image used */
+    background-image: url("./images/testImage.jpg");
+  
+    /* Set a specific height */
+    min-height: 1000px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+
